Add basic transcription app: recording, Groq API integration, notes list UI, settings with API key

--- a/VoiceInk-ios/Info.plist
+++ b/VoiceInk-ios/Info.plist
@@ -6,5 +6,7 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app records audio to transcribe into notes.</string>
 </dict>
 </plist>
