Update bundle name

--- a/VoiceInk-ios/Info.plist
+++ b/VoiceInk-ios/Info.plist
@@ -2,12 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDisplayName</key>
+	<string>Voice Ink</string>
+	<key>CFBundleName</key>
+	<string>VoiceInk</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
 		<string>audio</string>
 	</array>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>This app records audio to transcribe into notes.</string>
 </dict>
 </plist>
