--- a/VoiceInk-ios/Info.plist
+++ b/VoiceInk-ios/Info.plist
@@ -18,5 +18,9 @@
 			</array>
 		</dict>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 </dict>
 </plist>
